service.yml
apiVersion: v1
# Indicates this as a service
kind: Service
metadata:
  # Service name
  name: reddit-clone-service
  labels: 
    app: reddit-clone
spec:
  type: NodePort
  ports:
    # Port Map
  - port: 3000
    targetPort: 3000
    nodePort: 30009
  selector:
      # Selector for Pods
    app: reddit-clone
